add rotas tasks
